apps/my-headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-headlamp
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    external-dns.alpha.kubernetes.io/hostname: my-headlamp.capihome.xyz
spec:
  tls:
    - hosts:
        - my-headlamp.capihome.xyz
      secretName: wildcard-capihome-xyz-tls
  rules:
  - host: my-headlamp.capihome.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-headlamp
            port:
              number: 80
